# hardware-mental-model

./: Cargo.toml  README.md
benches/: data_dependency.rs  pipeline.rs
benches/cache/: associativity.rs  basic.rs  cacheline.rs  prefetcher.rs
src/: data_dependency.rs  lib.rs  unaligned_memory_access.rs
src/cache/: associativity.rs  basic.rs  cacheline.rs  mod.rs  prefetcher.rs
